--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -36,7 +36,7 @@ ion-menu ::-webkit-scrollbar {
   }
   
   .title {
-    font-weight: 700;
+    font-weight: bolder;
     color: #666;
     float: left;
     width: auto;
@@ -44,6 +44,7 @@ ion-menu ::-webkit-scrollbar {
     padding: 0;
     font-size: 24px;
     opacity: .9;
+    text-transform: uppercase;
     font-family: Roboto,sans-serif;
   }
   
