Admin Module Completed

--- a/src/pages/Partners/partner-delete/partner-delete.scss
+++ b/src/pages/Partners/partner-delete/partner-delete.scss
@@ -1,9 +1,5 @@
-page-partner-admin-edit {
+page-partner-delete {
     ion-input {
-        border-bottom: 1px solid map-get($colors, primary);
-        font-size: 110% ;
-    }
-    ion-textarea {
         border-bottom: 1px solid map-get($colors, primary);
         font-size: 110% ;
     }
@@ -13,4 +9,5 @@ page-partner-admin-edit {
             font-weight: 500;
         }
     }
+
 }
