--- a/src/pages/Partners/partner-admin-add/partner-admin-add.scss
+++ b/src/pages/Partners/partner-admin-add/partner-admin-add.scss
@@ -1,3 +1,16 @@
 page-partner-admin-add {
-
+    ion-input {
+        border-bottom: 1px solid map-get($colors, primary);
+        font-size: 110% ;
+    }
+    ion-textarea {
+        border-bottom: 1px solid map-get($colors, primary);
+        font-size: 110% ;
+    }
+    ion-item{
+        ion-label{
+            font-size: 110% !important ;
+            font-weight: 500;
+        }
+    }
 }
