--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,15 +2,15 @@
   <ion-menu [content]="content">
     <ion-header>
       <ion-toolbar color="dark">
-        <h1 class="t b">WalkIn Partner</h1>
-        <h1 class="t">Dashboard</h1>
+        <h1 class="t">WalkIn Partner</h1>
       </ion-toolbar>
     </ion-header>
 
     <ion-content class="no-scroll bg-semidark">
       <ion-list no-lines>
-        <button menuClose color="dark" [class.activeHighlight]="checkActive(p)" ion-item *ngFor="let p of pages" (click)="openPage(p)">
-          <ion-icon class="menu-icon" item-left [name]="p.icon"></ion-icon>
+        <button menuClose color="dark" [class.activeHighlight]="checkActive(p)" 
+        ion-item *ngFor="let p of pages" (click)="openPage(p)">
+          <ion-icon class="menu-icon" item-left [name]="p.icon" [color]="p.color" ></ion-icon>
 
           {{p.title}}
         </button>
