--- a/src/pages/Utility/home/home.scss
+++ b/src/pages/Utility/home/home.scss
@@ -1,3 +1,13 @@
 page-home {
+.mNum{
+    text-align: center;
+    color: map-get($colors,primary);
+    font-size: 36px;
+    font-weight: bolder;
+}
+.mText{
+    text-align: center;
+    color: map-get($colors,priamry);
 
+}
 }
