--- a/src/pages/Partner Restaurants/Restaurants/add-restaurant/add-restaurant.scss
+++ b/src/pages/Partner Restaurants/Restaurants/add-restaurant/add-restaurant.scss
@@ -1,3 +1,31 @@
 page-add-restaurant {
-
+    ion-input {
+        border-bottom: 1px solid map-get($colors, primary);
+        font-size: 110% ;
+    }
+    ion-select {
+        border-bottom: 1px solid map-get($colors, primary);
+        font-size: 110% ;
+    }
+    ion-textarea {
+        border-bottom: 1px solid map-get($colors, primary);
+        font-size: 110% ;
+    }
+    ion-row{
+        margin: 2%;
+        ion-item{
+            ion-label{
+                font-size: 110% !important ;
+                font-weight: 500;
+            }
+        }
+    }
+    ion-col{
+        ion-label{
+            font-size: 110% !important ;
+            font-weight: 500;
+            color : map-get($colors ,primary )
+        }
+    
+    }
 }
