--- a/src/pages/Partner Restaurants/Restaurants/view-menu/view-menu.scss
+++ b/src/pages/Partner Restaurants/Restaurants/view-menu/view-menu.scss
@@ -1,9 +1,7 @@
-page-user-view-notifications {
-    ion-input {
-        border-bottom: 1px solid map-get($colors, primary);
-        font-size: 110% ;
-    }
-    ion-textarea {
+page-view-menu {
+
+
+ion-input {
         border-bottom: 1px solid map-get($colors, primary);
         font-size: 110% ;
     }
