--- a/src/pages/Partner Playzones/PlayZones/add-play-zone/add-play-zone.scss
+++ b/src/pages/Partner Playzones/PlayZones/add-play-zone/add-play-zone.scss
@@ -1,3 +1,32 @@
 page-add-play-zone {
+    ion-input {
+        border-bottom: 1px solid map-get($colors, primary);
+        font-size: 110% ;
+    }
+    ion-select {
+        border-bottom: 1px solid map-get($colors, primary);
+        font-size: 110% ;
+    }
+    ion-textarea {
+        border-bottom: 1px solid map-get($colors, primary);
+        font-size: 110% ;
+    }
+    ion-row{
+        margin: 2%;
+        ion-item{
+            ion-label{
+                font-size: 110% !important ;
+                font-weight: 500;
+            }
+        }
+    }
+    ion-col{
+        ion-label{
+            font-size: 110% !important ;
+            font-weight: 500;
+            color : map-get($colors ,primary )
+        }
+    
+    }
 
 }
