--- a/src/pages/Utility/Notifications/notification-main/notification-main.scss
+++ b/src/pages/Utility/Notifications/notification-main/notification-main.scss
@@ -1,3 +1,9 @@
 page-notification-main {
-
+.cc{
+    height: 250px;
+    text-align: center;
+    cursor: pointer;
+    
+    padding-top: 100px;    
+}
 }
