Food Categories Added

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
   <ion-menu [content]="content">
     <ion-header>
       <ion-toolbar color="dark">
-        <h1 class="t">WalkIn Partner</h1>
+        <h1 class="t">WalkIn Admin</h1>
       </ion-toolbar>
     </ion-header>
 
