--- a/src/pages/Utility/Notifications/notification-main/notification-main.scss
+++ b/src/pages/Utility/Notifications/notification-main/notification-main.scss
@@ -1,9 +1,8 @@
 page-notification-main {
-.cc{
-    height: 250px;
-    text-align: center;
-    cursor: pointer;
-    
-    padding-top: 100px;    
+.bot{
+    border-top: 1px solid rgba($color: #000000, $alpha: 0.2) ;
+}
+ion-card{
+    border-radius: 3% !important;
 }
 }
